# phoneblocker

./: CMakeLists.txt
frontends/: CMakeLists.txt
frontends/blackberry/: CMakeLists.txt  bar-descriptor.xml  blocker.cpp  blocker.h  main.cpp
frontends/blackberry/cmake/: FindBB.cmake  FindBBCascades.cmake  FindBBPim.cmake  FindBBSystem.cmake  Toolchain-C6X.cmake  Toolchain-QNX-8.0.0.cmake
frontends/blackberry/headless/: CMakeLists.txt  blocker.cpp  blocker.h  main.cpp
frontends/blackberry/ui/: CMakeLists.txt  bar-descriptor.xml  blockeditem.cpp  blockeditem.h  blockeditemfactory.cpp  blockeditemfactory.h  main.cpp  mainwindow.cpp  mainwindow.h  phoneblockerui.qrc  socketwriter.cpp  socketwriter.h
frontends/blackberry/ui/assets/: main.qml
