cmake_minimum_required(VERSION 2.8.9)
set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../cmake)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
find_package(BB REQUIRED)
find_package(BBSystem REQUIRED)
find_package(BBPim REQUIRED)
include_directories(${QT_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${BB_INCLUDE_DIR} $ENV{QNX_TARGET}/usr/include)
set(PhoneBlockerHeadless_SRCS main.cpp blocker.cpp)
add_executable(phoneblockerheadless ${PhoneBlockerHeadless_SRCS})
target_link_libraries(phoneblockerheadless ${QT_QTCORE_LIBRARY} ${QT_QTNETWORK_LIBRARY} ${BB_LIBRARY} ${BBSYSTEM_LIBRARY} ${BBPIM_LIBRARY})
