cmake_minimum_required(VERSION 2.8.9)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../cmake)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
find_package(BBCascades REQUIRED)
find_package(BBPim REQUIRED)
include_directories( ${QT_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${BBCASCADES_INCLUDE_DIR} $ENV{QNX_TARGET}/usr/include)
set(PhoneBlockerUi_SRCS main.cpp mainwindow.cpp)
QT4_ADD_RESOURCES(PhoneBlockerUi_RCC_SRCS phoneblockerui.qrc)
add_executable(phoneblockerui ${PhoneBlockerUi_SRCS} ${PhoneBlockerUi_RCC_SRCS})
target_link_libraries( phoneblockerui ${QT_QTCORE_LIBRARY} ${BBCASCADES_LIBRARY})
