set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
find_package(BBCascades REQUIRED)
include_directories(${QT_INCLUDES} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${BBCASCADES_INCLUDE_DIR} $ENV{QNX_TARGET}/usr/include)
set(PhoneBlockerUi_SRCS main.cpp mainwindow.cpp)
add_executable(phoneblockerui ${PhoneBlockerUi_SRCS} phoneblockerui.qrc)
target_link_libraries(phoneblockerui ${QT_QTCORE_LIBRARY} ${BBCASCADES_LIBRARY})
